--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,10 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.17.2
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.8
+#yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
@@ -15,5 +16,6 @@ maven_group=com.madu59_
 archives_base_name=better-compass
 
 # Dependencies
-fabric_version=0.133.4+1.21.8
+fabric_version=0.129.0+1.21.7
+#fabric_version=0.133.4+1.21.8
 modmenu_version = 15.0.0
