--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ loader_version=0.18.0
 loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.5
-maven_group=com.madu59_
+mod_version=1.0.6
+maven_group=fr.madu59
 archives_base_name=better-compass
 
 # Dependencies
